callbacks and some trivia and other ecma entries

--- a/master.css
+++ b/master.css
@@ -284,6 +284,7 @@ a[ui-sref]:hover {
 .framed2 {
   padding: 2%;
   font-size: 1.4vw;
+  color: #18223b;
   margin: auto;
   background-color: #e3ab7e;
   border: 1px solid brown;
