--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -351,6 +351,20 @@ a[ui-sref]:hover {
     size: 1.4vw;
   }
 }
+.simple-frame3 {
+  border: 1px solid maroon;
+  box-shadow: 1px 1px 4px 1px map-get($colors, dkbg);
+  background-color: map-get($colors, pastgreen);
+  color: map-get($colors, trim);
+  font-family: Trebuchet, sans-serif;
+  font-weight: 400;
+  padding: 1vh 2vw;
+  font: {
+    weight: 400;
+    family: Trebuchet, Sans-Serif;
+    size: 1.4vw;
+  }
+}
 
 .framed1 {
   padding: 2%;
