--- a/master.scss
+++ b/master.scss
@@ -54,6 +54,7 @@ reddrk: #410211);
 @import 'scss/home/home';
 @import 'scss/angular/angular';
 @import 'scss/node/node';
+@import 'scss/sql/sql';
 @import 'scss/es6/es6';
 @import 'scss/svg/svg';
 @import 'scss/colors/colors';
