--- a/master.scss
+++ b/master.scss
@@ -19,6 +19,7 @@ dkorange: #945706,
 mutedOrange: #9a854e,
 dkgrey:#575757,
 ltgrey:#bdbdbd,
+offWhite: #d9d4c5,
 ivr:#e6d8cc,
 wh: #fff,
 mustard: #a38853,
@@ -34,6 +35,7 @@ transGreen: rgba(#32b384, 0.78),
 transPastGreen: rgba(#a6b696, 0.66),
 pastgreen: #a6b696,
 pastred: #c29d9d,
+pastpink: #9e869b,
 dkred:#441f1d,
 ltred:#eb473d,
 shadow: rgba(#000, 0.9),
