--- a/master.css
+++ b/master.css
@@ -591,7 +591,7 @@ table {
 
 th, td {
   text-align: center;
-  padding: 1vh 1vw; }
+  padding: .4vh .2vw; }
 
 tr:nth-child(even) {
   background-color: #f2f2f2; }
@@ -602,6 +602,21 @@ th {
 
 .col-2 {
   column-rule: 1px solid burlywood; }
+
+hr {
+  margin: .5vh 20vw; }
+
+.bright-table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid green;
+  box-shadow: 2px 2px 6px 1px black; }
+  .bright-table th {
+    background-color: darkblue; }
+  .bright-table tr:nth-child(even) {
+    background-color: #f2f2f2; }
+  .bright-table tr:nth-child(odd) {
+    background-color: skyblue; }
 
 div.es6-entry {
   background-color: #945706;
