--- a/scss/sql/sql.scss
+++ b/scss/sql/sql.scss
@@ -4,6 +4,9 @@ div.sql-entry {
   color: white;
   overflow: auto;
   height: 80vh;
+  font: {
+    family: map-get($fonts, Comfortaa);
+  }
   position: relative;
   a {
     background-color: map-get($colors, trans30);
@@ -19,7 +22,7 @@ table {
 
 th, td {
     text-align: center;
-    padding: 1vh 1vw;
+    padding: .4vh .2vw;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
@@ -30,4 +33,22 @@ th {
 }
 .col-2 {
   column-rule: 1px solid burlywood;
+}
+
+hr {
+  margin: .5vh 20vw;
+}
+
+.bright-table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid green;
+  box-shadow: 2px 2px 6px 1px black;
+  th {
+    background-color: darkblue;
+  }
+  tr:nth-child(even){background-color: #f2f2f2}
+  tr:nth-child(odd){background-color: skyblue}
+
+
 }
