--- a/master.scss
+++ b/master.scss
@@ -31,6 +31,7 @@ mutedBlue:#3f6a96,
 dkblue:#18223b,
 ltgreen:#79e286,
 pastOlive: #758a88,
+pastBlue: #58708a,
 transGreen: rgba(#32b384, 0.78),
 transPastGreen: rgba(#a6b696, 0.66),
 pastgreen: #a6b696,
