--- a/master.css
+++ b/master.css
@@ -260,6 +260,16 @@ a[ui-sref]:hover {
   font-family: "Raleway", Sans-Serif, Sans-Serif;
   font-size: 1.5vw; }
 
+.plain-frame2 {
+  border: 1px solid black;
+  box-shadow: inset 1px 1px 4px 1px rgba(0, 0, 0, 0.61);
+  background-color: #9e869b;
+  color: #d9d4c5;
+  padding: 1vh 2vw;
+  font-weight: 400;
+  font-family: "Raleway", Sans-Serif, Sans-Serif;
+  font-size: 1.5vw; }
+
 .simple-frame {
   border: 1px solid maroon;
   box-shadow: inset 1px 1px 4px 1px rgba(0, 0, 0, 0.61);
@@ -611,6 +621,7 @@ table {
 
 th, td {
   text-align: center;
+  color: black;
   padding: .4vh .2vw; }
 
 tr:nth-child(even) {
