--- a/master.scss
+++ b/master.scss
@@ -28,6 +28,7 @@ txtShadow: #f1e8ce,
 ltblue:#3f71f1,
 navy: navy,
 mutedBlue:#3f6a96,
+mutedPurp: #827a90,
 dkblue:#18223b,
 ltgreen:#79e286,
 pastOlive: #758a88,
@@ -41,6 +42,7 @@ dkred:#441f1d,
 ltred:#eb473d,
 shadow: rgba(#000, 0.9),
 dkbg: rgba(#2d2c2c, 0.7),
+dkbg2: rgba(#2f090f, 0.45),
 ltbg: rgba(#c7be84, 0.5),
 y: yellow,
 paleY: #e8e598,
