--- a/master.scss
+++ b/master.scss
@@ -44,7 +44,9 @@ shadow: rgba(#000, 0.9),
 dkbg: rgba(#2d2c2c, 0.7),
 dkbg2: rgba(#2f090f, 0.45),
 ltbg: rgba(#c7be84, 0.5),
+ltbg2: rgba(#a0b6b8, 0.6),
 y: yellow,
+black: black,
 paleY: #e8e598,
 pastY: #bfbc64,
 purp: purple,
