--- a/master.scss
+++ b/master.scss
@@ -43,8 +43,10 @@ ltred:#eb473d,
 shadow: rgba(#000, 0.9),
 dkbg: rgba(#2d2c2c, 0.7),
 dkbg2: rgba(#2f090f, 0.45),
+dkbg3: rgba(#1e2337, 0.6),
 ltbg: rgba(#c7be84, 0.5),
 ltbg2: rgba(#a0b6b8, 0.6),
+ltbg3: rgba(#f2e1a5, 0.5),
 y: yellow,
 black: black,
 paleY: #e8e598,
