--- a/master.css
+++ b/master.css
@@ -397,6 +397,21 @@ pre {
   text-align: left;
   border: 1px solid #9a854e; }
 
+.dk-frame {
+  padding: 1%;
+  font-family: "Cabin", Sans-Serif;
+  color: #bdbdbd;
+  border: 1px solid #e6d8cc;
+  box-shadow: inset 1px 1px 12px 2px black;
+  background-color: rgba(30, 35, 55, 0.6); }
+
+.lt-frame {
+  font-family: "Cabin", Sans-Serif;
+  color: black;
+  border: 1px solid black;
+  box-shadow: inset 1px 1px 12px 2px black;
+  background-color: rgba(242, 225, 165, 0.5); }
+
 .top-right-box {
   border: 1px solid maroon;
   background-color: rgba(199, 190, 132, 0.5);
