--- a/master.css
+++ b/master.css
@@ -253,6 +253,17 @@ a[ui-sref]:hover {
 .txtLeft {
   text-align: left; }
 
+.plain-frame0 {
+  border: 1px solid black;
+  box-shadow: inset 1px 1px 2px 1px rgba(0, 0, 0, 0.61);
+  background-color: darkgrey;
+  color: #18223b;
+  padding: 1vh 1vw;
+  margin: 10px;
+  font-weight: 400;
+  font-family: menlo, Sans-Serif;
+  font-size: 1vw; }
+
 .plain-frame1 {
   border: 1px solid maroon;
   box-shadow: inset 1px 1px 4px 1px rgba(0, 0, 0, 0.61);
