--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -84,6 +84,9 @@
 .ltgreen {
   color: map-get($colors, ltgreen);
 }
+.transGreen {
+  color: map-get($colors, transGreen);
+}
 
 .dkred {
   color: map-get($colors, dkred);
