--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -87,6 +87,9 @@
 .transGreen {
   color: map-get($colors, transGreen);
 }
+.pastOlive {
+  color: map-get($colors, pastOlive);
+}
 
 .dkred {
   color: map-get($colors, dkred);
