--- a/master.scss
+++ b/master.scss
@@ -19,6 +19,7 @@ dkorange: #945706,
 mutedOrange: #9a854e,
 dkgrey:#575757,
 ltgrey:#bdbdbd,
+coral: coral,
 offWhite: #d9d4c5,
 ivr:#e6d8cc,
 wh: #fff,
