--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -90,7 +90,9 @@
 .pastOlive {
   color: map-get($colors, pastOlive);
 }
-
+.coral {
+  color: coral;
+}
 .dkred {
   color: map-get($colors, dkred);
 }
