--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -600,6 +600,12 @@ pre {
 .ctr {
   margin: 0 auto;
 }
+.brdr-lt {
+  border: 1px solid burlywood;
+}
+.brdr-dk {
+  border: 1px solid black;
+}
 .right {
   position: relative;
   margin-left: 40vw;
