--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -131,3 +131,9 @@
 .trans {
   color: transparent;
 }
+.dkghost {
+  background-color: map-get($colors, dkghost);
+}
+.ltghost {
+  background-color: map-get($colors, ltghost);
+}
