--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -347,7 +347,7 @@ a[ui-sref]:hover {
   }
 }
 .plain-frame1 {
-  border: 1px solid maroon;
+  border: 1px solid black;
   box-shadow: inset 1px 1px 4px 1px rgba(#000000, 0.61);
   background-color: map-get($colors, offWhite);
   color: map-get($colors, dkblue);
