--- a/master.scss
+++ b/master.scss
@@ -70,4 +70,5 @@ reddrk: #410211);
 @import 'scss/es6/es6';
 @import 'scss/svg/svg';
 @import 'scss/colors/colors';
+@import 'scss/gsap/gsap';
 @import 'scss/journal/journal';
