--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -646,3 +646,9 @@ img.neighbors-item {
 .ltbg3 {
   background-color: map-get($colors, ltbg3);
 }
+.brdr-w {
+  border: 1px solid ivory;
+}
+.brdr-b{
+  border: 1px solid black;
+}
