entries and class additions

--- a/master.css
+++ b/master.css
@@ -184,6 +184,10 @@ pre.prettyprint {
   columns: 2 5vw;
   column-rule: 1px solid fuchsia; }
 
+.col-3 {
+  columns: 3 auto;
+  column-rule: 1px solid #a38853; }
+
 img {
   margin: 1vw;
   position: relative;
