--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -641,7 +641,7 @@ img.neighbors-item {
 .prettyprint ol.linenums > li { list-style-type: decimal-leading-zero; }
 
 .linenums {
-  margin-left: 2%;
+  margin-left: 2vw;
 }
 
 .dkbg3 {
