--- a/master.scss
+++ b/master.scss
@@ -6,10 +6,11 @@ sass --watch master.scss:master.css
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 @import url('https://fonts.googleapis.com/css?family=Cabin');
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100');
 
 $baseline: 1vw; // $baseline:
 $title-font: 40px Tahoma, Helvetica, Arial, Sans-Serif;
-$fonts: ( Comfort: ('Comfortaa', cursive), Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif) );
+$fonts: ( Comfort: ('Comfortaa', cursive), Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif), Thin: ('Roboto', Sans-Serif ));
 $colors: (
 trans30: rgba(#808080, 0.35),
 mango:#ebb861,
@@ -18,6 +19,7 @@ orange:#f28b02,
 dkorange: #945706,
 mutedOrange: #9a854e,
 dkgrey:#575757,
+dkgrey2:#868585,
 ltgrey:#bdbdbd,
 coral: coral,
 offWhite: #d9d4c5,
@@ -39,9 +41,13 @@ transPastGreen: rgba(#a6b696, 0.66),
 pastgreen: #a6b696,
 pastred: #c29d9d,
 pastpink: #9e869b,
+
 dkred:#441f1d,
+dkred2:#612c2a,
+dkred3:#963532,
+reddrk: #410211,
 ltred:#eb473d,
-shadow: rgba(#000, 0.9),
+shadow: rgba(#000, 0.5),
 dkbg: rgba(#2d2c2c, 0.7),
 dkbg2: rgba(#2f090f, 0.45),
 dkbg3: rgba(#1e2337, 0.6),
@@ -55,8 +61,7 @@ black: black,
 paleY: #e8e598,
 pastY: #bfbc64,
 purp: purple,
-fuch: fuchsia,
-reddrk: #410211);
+fuch: fuchsia);
 
 @import 'scss/general/general';
 @import 'scss/jq/jquery';
