--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -182,7 +182,9 @@ pre.prettyprint {
 .bg {
   font-size: 2em;
 }
-
+.xl-txt {
+  font-size: 3em;  
+}
 .shadn {
   box-shadow: 5px 5px 5px black;
   border: 1px solid wheat;
@@ -675,4 +677,15 @@ img.neighbors-item {
   width: 100%;
   height: 100%;
   background: transparent;
+}
+.thin {
+  font-family: map-get($fonts, Thin);
+}
+.debossed-dk-frame {
+  padding: 1%;
+  background: linear-gradient(to right, rgba(0,0,0,0.5) 20%,rgba(125,185,232,0) 80%);
+  border: 1px solid map-get($colors, dkghost);
+  border-right: 0px solid transparent;
+  border-bottom: 0px solid transparent;
+  box-shadow: inset 10px 7px 6px -2px map-get($colors, black);
 }
