--- a/master.scss
+++ b/master.scss
@@ -17,20 +17,25 @@ mango:#ebb861,
 sand:#d0b588,
 orange:#f28b02,
 dkorange: #945706,
+softbrown: #2c2d32,
 mutedOrange: #9a854e,
+softsand: #b38f59,
 dkgrey:#575757,
 dkgrey2:#868585,
 ltgrey:#bdbdbd,
 coral: coral,
+softred: #b64d3e,
 offWhite: #d9d4c5,
 ivr:#e6d8cc,
 wh: #fff,
 mustard: #a38853,
 trim: #f5facf,
 txtShadow: #f1e8ce,
+softwhite: #cdcdcd,
 ltblue:#3f71f1,
 navy: navy,
 mutedBlue:#3f6a96,
+softblue:#436475,
 mutedPurp: #827a90,
 dkblue:#18223b,
 ltgreen:#79e286,
@@ -47,7 +52,7 @@ dkred2:#612c2a,
 dkred3:#963532,
 reddrk: #410211,
 ltred:#eb473d,
-shadow: rgba(#000, 0.5),
+shadow: rgba(#000, 0.8),
 dkbg: rgba(#2d2c2c, 0.7),
 dkbg2: rgba(#2f090f, 0.45),
 dkbg3: rgba(#1e2337, 0.6),
@@ -77,3 +82,4 @@ fuch: fuchsia);
 @import 'scss/colors/colors';
 @import 'scss/gsap/gsap';
 @import 'scss/journal/journal';
+@import 'scss/grid/grid';
